fix(phase6): citation 인용 표기되지 않는 문제 개선